@@ -1,5 +1,8 @@
 2004-05-20  Matthew Mueller  <donut@dakotacom.net>
 
+	* arch/win32/digi.c: fixed a major memory leak and removed a bit
+	of redundancy (d1x r1.5)
+
 	* arch/win32/digi.c: call digi_reset_digi_sounds in digi_close to
 	fix crashing (d1x r1.4)
 
